@@ -3,7 +3,23 @@ replace restart {
 	bit	%3,a
 	jp	%4,%5
 } by {
-        ; Rule 100: Removed redundent load
 	bit	%3,%1(%2)
 	jp	%4,%5
+}
+replace {
+	ld	%1,%2)
+	ld	a,%2)
+} by {
+        ld      %1,%2)
+        ld      a,%1
+}
+replace {
+	ld	%1),a
+	xor	a,a
+	or	a,%1)
+	jp	z,%2
+} by {
+        ld      %1),a
+        or      a,a
+	jp	z,%2
 }
